# av-asistan

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
scripts/: ingest.py  reset_db.py
src/avukat/: config.py  db.py  models.py
src/avukat/browser/: __init__.py  manager.py  navigator.py
src/avukat/ingestion/: embedder.py  fetcher.py  loader.py  parser.py
src/avukat/llm/: __init__.py  base.py  claude_client.py  gemini_client.py  ollama_client.py  openai_client.py  prompts.py
src/avukat/memory/: __init__.py  extractor.py  service.py
src/avukat/rag/: citation.py  pipeline.py
src/avukat/search/: bm25_search.py  hybrid.py  vector_search.py
src/avukat/voice/: __init__.py  audio.py  prompts.py  session.py  tools.py
src/avukat/web/: app.py  routes.py  ws.py
src/avukat/web/static/: app.js  audio-processor.js  style.css  voice.js
src/avukat/web/templates/: base.html  index.html  voice.html
src/avukat/web/templates/partials/: answer.html
